--- a/index.html
+++ b/index.html
@@ -11,26 +11,20 @@
 
     <div class="container">
         <header>
-            <h1 class="title">PARTICIPE DP WORKSHOP QUE VAI MUDAR O SEU NEGÓCIO</h1>
+            <h1 class="title">RECEBA OFERTAS DIRETAMENTE NO SEU EMAIL, CADASTRE-SE</h1>
         </header>
         <section>
             <div class="conteiner">
             <div class="formContainer">
-                <h2 class="mb">GARAANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
-                <p class="mb">Neste evento, você vai todos os segredos que vão te fazer ser um empreendedor de 
-                    sucesso sem precisar contar com a sorte</p>
+                <h2 class="mb">GARANTA JÁ O ACESSO AS MELHORES OFERTAS DO MERCADO DE CARTUXOS</h2>
+                <p class="mb">Na nossa lojá o senhor ira encontrar a maior variedade de produtos e com o melhor custo 
+                    beneficio 
+                </p>
                 <form method="post"
-                 action="https://gmail.us1.list-manage.com/subscribe/post?u=8cfd69471274bbaecd39fcba1&amp;id=8587a31b80"
+                 action="https://gmail.us6.list-manage.com/subscribe/post?u=cd7eb39ee6469553a6aad91e6&amp;id=1a46cd0df5"
                 id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <input id="name" name="FNAME" type="text" placeholder="Nome">
                     <input id="email" name="EMAIL" type="text" placeholder="Email">
-                    <select name="PLACE">
-                        <option value="rj">Rio de Janeiro</option>
-                        <option value="sp">São Paulo</option>
-                        <option value="mg">Minas Gerais</option>
-                        <option value="es">Espirito Santo</option>
-                    </select>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8cfd69471274bbaecd39fcba1_8587a31b80" tabindex="-1" value=""></div>
                     <input type="submit" value="INSCREVA-SE">
 
@@ -39,15 +33,16 @@
         </div>
         </section>
         <footer>
-            <img class="picture" src="./images//face.jpg">
+            <img class="picture" src="./images/Logo.jpeg">
             <div class="description">
-                <h3>O Palestrante</h3>
-                <p>Carlos Fontana é conhecido por dar palestras que abalam a estrutura do marketing tradicional.
-                    Prepare-se para sair do evento com uma nova visão do que é possivel ser feito para o seu negócio
-                    decolar.    
+                <h3>Sobre a loja</h3>
+                <p>Há 18 anos na cidade de Arapiraca, uma loja de recarga de cartuchos (jato de tinta) e toners (laser). Escolhemos material 
+específico para cada marca procurada.
+Trabalhando também com desuntipimento de cartuchos que aparecem, acontece esse fato muitas vezes quando não se usa a tinta específica.
+Procuramos atender da   
                 </p>
-                <p>Formado em marketing pela universidade XWZ é fundador da MarkUp, a empresa vencedora dos últimos
-                    5 Prêmios MarketingBr.
+                <p>melhor forma possível e também mais rápida.Consertamos algumas marcas de impressoras.
+Recarga com qualidade é o que sempre trabalhamos pra manter com essa marca. Vendemos resmas, cartuchos compatíveis Epson, Originais da HP e tintas Epson para bulk ink (Originais e compatíveis)
                 </p>
             </div> 
         </footer>
